--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     }
   },
   "devDependencies": {
-    "husky": "^9.1.7",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
-    "commitizen": "^4.3.1",
-    "cz-conventional-changelog": "^3.3.0"
+    "commitizen": "^3.0.0",
+    "cz-conventional-changelog": "^3.0.1",
+    "husky": "^9.1.7"
   },
   "workspaces": [
     "flowsint-app"
-  ]
+  ],
+  "dependencies": {
+    "react-syntax-highlighter": "16.1.0",
+    "vite": "7.2.4"
+  }
 }
