--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -34,6 +34,7 @@ services:
       timeout: 5s
       retries: 5
 
+  # Neo4j com healthcheck infalível (não depende de senha)
   neo4j:
     image: neo4j:5
     container_name: flowsint-neo4j-dev
@@ -55,11 +56,11 @@ services:
     networks:
       - flowsint_network
     healthcheck:
-      test: ["CMD-SHELL", "timeout 5 bash -c 'cat < /dev/null > /dev/tcp/127.0.0.1/7687' || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
       interval: 10s
       timeout: 10s
-      retries: 15
-      start_period: 40s   # ← tempo extra pro Neo4j ligar
+      retries: 30
+      start_period: 60s   # ← dá 1 minuto pra API iniciar com migrações
 
   api:
     build:
@@ -69,7 +70,7 @@ services:
     container_name: flowsint-api-dev
     restart: unless-stopped
     ports:
-      - "5001:8000"
+      - "5001:5001"  # porta oficial
     volumes:
       - ./flowsint-api:/app/flowsint-api
       - ./flowsint-core:/app/flowsint-core
@@ -89,11 +90,11 @@ services:
       neo4j:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
       interval: 10s
       timeout: 10s
-      retries: 15
-      start_period: 40s   # ← esse era o detalhe que faltava!
+      retries: 20
+      start_period: 40s
     networks:
       - flowsint_network
 
