--- a/flowsint-api/pyproject.toml
+++ b/flowsint-api/pyproject.toml
@@ -33,6 +33,7 @@ mistralai = "^1.9.3"
 python-multipart = "^0.0.20"
 openpyxl = "^3.1.2"
 jsonschema = "^4.25.1"
+openai = "^1.54.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.0"
