--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -77,6 +77,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
+      - SKIP_MIGRATIONS=true
       - DATABASE_URL=postgresql://${POSTGRES_USER:-flowsint}:${POSTGRES_PASSWORD:-flowsint}@postgres:5432/${POSTGRES_DB:-flowsint}
       - NEO4J_URI_BOLT=bolt://neo4j:7687
       - NEO4J_USERNAME=${NEO4J_USERNAME}
@@ -84,6 +85,8 @@ services:
       - AUTH_SECRET=${AUTH_SECRET}
       - MASTER_VAULT_KEY_V1=${MASTER_VAULT_KEY_V1}
       - REDIS_URL=redis://redis:6379/0
+      - SCARLET_IA_ADMIN_EMAILS=${SCARLET_IA_ADMIN_EMAILS}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
       postgres:
         condition: service_healthy
