Add Railway config files and serve dependency

--- a/flowsint-dossier-admin/package.json
+++ b/flowsint-dossier-admin/package.json
@@ -22,7 +22,8 @@
     "react-dropzone": "^14.2.3",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
