--- a/flowsint-dossier/package.json
+++ b/flowsint-dossier/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^10.16.16",
     "date-fns": "^3.0.0",
     "react-markdown": "^9.0.1",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
