--- a/flowsint-app/package.json
+++ b/flowsint-app/package.json
@@ -77,6 +77,7 @@
     "@xterm/addon-webgl": "^0.18.0",
     "@xterm/xterm": "^5.5.0",
     "@xyflow/react": "^12.6.4",
+    "axios": "^1.13.2",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
