last update new year

--- a/flowsint-dossier/.env.example
+++ b/flowsint-dossier/.env.example
@@ -1,1 +1,5 @@
 VITE_API_URL=https://api.scarletredsolutions.com
+
+# OwnData API Configuration
+VITE_OWNDATA_API_URL=https://completa.workbuscas.com/api
+VITE_OWNDATA_TOKEN=HhsbkqwwpEJIhEZPQGAPOjmC
